feat: 增强 AI 评论、翻译与欢迎页体验